# bi

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
.github/workflows/: deploy.yaml
.sqlx/: query-cac902d04b0d2935377849536abe0de4775789695d05e86030b278ae800e224f.json
migrations/: 1_nodes.sql  2_nodes.sql
src/: config.rs  lib.rs  main.rs  synchronizer.rs  utils.rs
src/http/: mod.rs  nodes.rs
