[package]
name = "bi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "time"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
    "catch-panic",
    "compression-full",
    "timeout",
    "trace"
] }
